<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21768F"
    tools:context=".Superman">

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="13dp"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/superman"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView55"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/textView55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="13dp"
        android:hint="@string/nome"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/superman_nome"
        app:layout_constraintStart_toStartOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/codi_nome"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView56"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/superman_codinome"
        app:layout_constraintStart_toStartOf="@+id/textView57"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/especie"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView58"
        app:layout_constraintTop_toBottomOf="@+id/textView58" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/superman_especie"
        app:layout_constraintStart_toStartOf="@+id/textView59"
        app:layout_constraintTop_toBottomOf="@+id/textView59" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/habilidade"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView60"
        app:layout_constraintTop_toBottomOf="@+id/textView60" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/superman_habilidade"
        app:layout_constraintEnd_toEndOf="@+id/textView64"
        app:layout_constraintStart_toEndOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView61" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="406dp"
        android:hint="@string/vulnerabilidade"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/superman_vulnerabilidade"
        app:layout_constraintStart_toStartOf="@+id/textView63"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/equip_nome"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView64" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/superman_equip_nome"
        app:layout_constraintStart_toStartOf="@+id/textView65"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/equip_desc"
        app:layout_constraintStart_toStartOf="@+id/textView66"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/superman_equip_desc"
        app:layout_constraintStart_toStartOf="@+id/textView67"
        app:layout_constraintTop_toBottomOf="@+id/textView67" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/equip_finalidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/superman_equip_func"
        app:layout_constraintStart_toStartOf="@+id/textView69"
        app:layout_constraintTop_toBottomOf="@+id/textView69" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="87dp"
        android:contentDescription="@string/superman"
        app:layout_constraintBottom_toTopOf="@+id/textView63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView54"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ol" />
</androidx.constraintlayout.widget.ConstraintLayout>